import("//build_overrides/pigweed.gni")
import("//third_party/pigweed/pw_build/python.gni")
import("//third_party/pigweed/pw_build/python_dist.gni")

group("default") {
  deps = [
    ":hello_world",
    ":python.lint",
    ":python.tests",
  ]
}

group("hello_world") {
  deps = [
    "//src:hello_world(//third_party/pigweed/targets/host_device_simulator:host_device_simulator.debug)",
  ]
}

pw_python_group("python") {
  python_deps = [
    "//third_party/pigweed/pw_env_setup:python",
  ]
}
