import("//build_overrides/pigweed.gni")
import("//third_party/pigweed/pw_build/python.gni")
import("//third_party/pigweed/pw_build/python_dist.gni")

group("default") {
    deps = [
        ":hello_world_sys",
        ":python.lint",
        ":python.tests",
    ]
}

group("hello_world_sys") {
    deps = [
        "//src:hello_world_sys(//targets/host_sys:host_sys.debug)",
    ]
}

pw_python_group("python") {
    python_deps = [
        "//third_party/pigweed/pw_env_setup:python",
    ]
}
