import("//build_overrides/pigweed.gni")
import("//third_party/pigweed/pw_build/python.gni")
import("//third_party/pigweed/pw_build/python_dist.gni")

group("default") {
    deps = [
        ":hello_world_bare",
        ":hello_world_sys",
        ":python.lint",
        ":python.tests",
    ]
}

group("hello_world_bare") {
    deps = [
        "//src:hello_world_bare(//targets/host_bare:host_bare_debug)",
    ]
}

group("hello_world_sys") {
    deps = [
        "//src:hello_world_sys(//targets/host_sys:host_sys.debug)",
        "//src:hello_world_sys(//targets/rp2040_sys:rp2040_sys.debug)",
    ]
}


pw_python_group("python") {
    python_deps = [
        "//third_party/pigweed/pw_env_setup:python",
    ]
}
