import("//build_overrides/pigweed.gni")
import("$dir_pw_build/python.gni")
import("$dir_pw_build/python_dist.gni")

##############
# Applications
##############

group("default") {
  deps = [
    ":python.lint",
    ":python.tests",
    ":app",
  ]
}

group("app") {
  deps = [
    "//src:app(//targets/discocube:discocube_debug)",
  ]
}

################
# Python tooling
################

pw_python_group("python") {
  python_deps = [
    "$dir_pw_env_setup:python",
  ]
}
