import("//build_overrides/pigweed.gni")
import("//third_party/pigweed/pw_build/python.gni")
import("//third_party/pigweed/pw_build/python_dist.gni")

##############
# Applications
##############

group("default") {
  deps = [
    ":python.lint",
    ":python.tests",
    ":app",
  ]
}

group("app") {
  deps = [
    # "//src:app(//targets/stm32f429i_disc1_stm32cube:stm32f429i_disc1_stm32cube.size_optimized)",
    "//src:app(//targets/arduino:arduino_debug)",
  ]
}

################
# Python tooling
################

pw_python_group("python") {
  python_deps = [
    "//third_party/pigweed/pw_env_setup:python",
  ]
}
