import("//build_overrides/pigweed.gni")
import("//third_party/pigweed/pw_build/target_types.gni")

group("all") {
    deps = [
        ":hello_world_bare",
        ":hello_world_sys",
    ]
}

pw_executable("hello_world_bare") {
    sources = ["hello_world_bare.cc"]
    deps = [
        "//third_party/pigweed/pw_function",
        "//third_party/pigweed/pw_log",
        "//third_party/pigweed/pw_string",
    ]
}

pw_executable("hello_world_sys") {
    sources = ["hello_world_sys.cc"]
    deps = [
        "//third_party/pigweed/pw_log",
        "//third_party/pigweed/pw_system:pw_system",
    ]
}
