# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

platform(
    name = "stm32",
    parents = ["@pigweed//targets/stm32f429i_disc1_stm32cube:platform"],
    # constraint_values = [
    #     # "@pigweed//pw_toolchain/arm_gcc:warnings",
    #     "@pigweed//targets/stm32f429i_disc1_stm32cube:freertos_config_cv",
    #     "@pigweed//pw_build/constraints/rtos:freertos",
    #     "@pigweed//pw_interrupt_cortex_m:backend",
    #     "@pigweed//pw_malloc_freelist:backend",
    #     "@pigweed//pw_sys_io_stm32cube:backend",
    #     "@pigweed//third_party/freertos:port_ARM_CM4F",
    #     "@pigweed//third_party/freertos:disable_task_statics",
    #     "@platforms//cpu:armv7e-m",
    #     "@pw_toolchain//constraints/arm_mcpu:cortex-m4",
    # ],
)
