# Copyright 2023 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

platform(
    name = "stm32",
    constraint_values = [
        "@pigweed//pw_malloc_freelist:backend",
        "@pigweed//pw_sys_io_stm32cube:backend",
        "@platforms//cpu:armv7e-m",
        "@platforms//os:none",
        "@pw_toolchain//constraints/arm_mcpu:cortex-m4+nofp",
    ],
)
