import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")

group("all") {
    deps = [
        ":app",
    ]
}

pw_executable("app") {
    sources = [ "app.cc" ]
    deps = [
        "$dir_pw_chrono:system_clock",
        "$dir_pw_chrono:system_timer",
        "$dir_pw_log:pw_log",
        "$dir_pw_system:pw_system",
        "$dir_pw_system:work_queue",
    ]
}
