import("//build_overrides/pigweed.gni")
import("//third_party/pigweed/targets/host/target_toolchains.gni")
import("//third_party/pigweed/pw_toolchain/generate_toolchain.gni")

generate_toolchain("host_bare_debug") {
    _excluded_members = [
        "defaults",
        "name",
    ]
    _toolchain_base = pw_target_toolchain_host.gcc_debug
    forward_variables_from(_toolchain_base, "*", _excluded_members)
    defaults = {
        forward_variables_from(_toolchain_base.defaults, "*")
        pw_assert_BACKEND = "//third_party/pigweed/pw_assert_basic"
        pw_log_BACKEND = "//third_party/pigweed/pw_log_basic"
        pw_build_LINK_DEPS = []
        pw_build_LINK_DEPS = [
            "//third_party/pigweed/pw_assert:impl",
            "//third_party/pigweed/pw_log:impl",
        ]
    }
}
