# Source: https://pigweed.googlesource.com/pigweed/sample_project/+/refs/heads/main/targets/stm32f429i_disc1_stm32cube/target_toolchains.gni
import("//build_overrides/pigweed.gni")
import("$dir_pigweed/targets/stm32f429i_disc1/target_toolchains.gni")
import("$dir_pw_protobuf_compiler/proto.gni")
import("$dir_pw_third_party/nanopb/nanopb.gni")

_toolchain_args = {
  # Configure backend for assert facade.
  pw_assert_BACKEND = dir_pw_assert_basic
  pw_log_BACKEND = dir_pw_log_basic
  pw_build_LINK_DEPS = [
    "$dir_pw_assert:impl",
    "$dir_pw_log:impl",
  ]
}

toolchain_definitions = {
  _excluded_members = [
    "defaults",
    "name",
  ]
  _excluded_defaults = [
    "pw_cpu_exception_ENTRY_BACKEND",
    "pw_cpu_exception_HANDLER_BACKEND",
    "pw_cpu_exception_SUPPORT_BACKEND",
  ]
  debug = {
    name = "discocube_debug"
    _toolchain_base = pw_target_toolchain_stm32f429i_disc1.debug
    forward_variables_from(_toolchain_base, "*", _excluded_members)
    defaults = {
      forward_variables_from(_toolchain_base.defaults, "*", _excluded_defaults)
      forward_variables_from(_toolchain_args, "*")
    }
  }
}

toolchains_list = [toolchain_definitions.debug]
